--- a/.github/workflows/deploy-microservices.yaml
+++ b/.github/workflows/deploy-microservices.yaml
@@ -1,16 +1,16 @@
 name: Deploy Microservices
 
 # Builds and deploys the microservices (proving-service, verifier-service, ipfs-service)
-# Updates Kubernetes manifests so ArgoCD can deploy the new versions
+# Updates Kubernetes manifests
 
-# on:
-#   push:
-#     branches: [main]
-#     paths:
-#       - 'proving-service/**'
-#       - 'verifier-service/**'
-#       - 'ipfs-service/**'
-#       - '.github/workflows/deploy-microservices.yaml'
+on:
+  push:
+    branches: [main]
+    paths:
+      - 'proving-service/**'
+      - 'verifier-service/**'
+      - 'ipfs-service/**'
+      - '.github/workflows/deploy-microservices.yaml'
 
 on:
   workflow_dispatch:  # Manual trigger only
