--- a/k8s/blockchain/configmap.yaml
+++ b/k8s/blockchain/configmap.yaml
@@ -72,7 +72,7 @@ data:
     contract SBOMRegistry {
         struct SBOMEntry {
             bytes32 hash;
-            string image;
+            bytes32 softwareDigest;
             string identifier;
             bytes32 imageId;
             string ipfsCid;
@@ -87,7 +87,7 @@ data:
     
         event SBOMStored(
             bytes32 indexed hash,
-            string image,
+            bytes32 softwareDigest,
             string identifier,
             bytes32 imageId,
             string ipfsCid,
@@ -99,7 +99,7 @@ data:
     
         function storeSBOM(
             bytes32 hash,
-            string calldata image,
+            bytes32 softwareDigest,
             string calldata identifier,
             bytes32 imageId,
             string calldata ipfsCid,
@@ -109,7 +109,7 @@ data:
             require(entries[hash].timestamp == 0, "Already stored");
             SBOMEntry memory entry = SBOMEntry({
                 hash: hash,
-                image: image,
+                softwareDigest: softwareDigest,
                 identifier: identifier,
                 imageId: imageId,
                 ipfsCid: ipfsCid,
@@ -120,7 +120,7 @@ data:
             });
             entries[hash] = entry;
             hashes.push(hash);
-            emit SBOMStored(hash, image, identifier, imageId, ipfsCid, isValid, bannedListHash, msg.sender, block.timestamp);
+            emit SBOMStored(hash, softwareDigest, identifier, imageId, ipfsCid, isValid, bannedListHash, msg.sender, block.timestamp);
         }
     
         function getSBOM(bytes32 hash) external view returns (SBOMEntry memory) {
